<resources>
    <string name="app_name">Hotpot</string>
    <array name="sda_array_select_roles">
        <item>User</item>
        <item>Admin</item>
        <item>Seller</item>
    </array>

    <array name="sda_array_select_roles_reg">
        <item>User</item>
        <item>Seller</item>
    </array>
    <string name="title_activity_admin_main">AdminMainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Hotpot</string>
    <string name="nav_header_subtitle">Main Controller</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">User Items</string>
    <string name="menu_gallery">Seller Orders</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Logout</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
