<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/sda_nav_admin_userItems"
            android:icon="@drawable/ic_user_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/sda_nav_admin_sellerOrders"
            android:icon="@drawable/ic_restaurant_black_24dp"
            android:title="@string/menu_gallery" />
        <item
            android:visible="false"
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:visible="false"
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_tools" />
    </group>

    <item android:title="SignOut">
        <menu>
            <item
                android:id="@+id/sda_nav_admin_logout"
                android:icon="@drawable/ic_log_off_black_24dp"
                android:title="@string/menu_share" />
            <item
                android:visible="false"
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
